--- a/outputf.in
+++ b/outputf.in
@@ -1,21 +1,4 @@
-
-Kapil
-Bavisiya
-Bavisiya
-Bavisiya
-kapil
-kapil
-it's empty
-Hii there
-Hii there also how's you?
-25
-0
--1
-1
-0
-Mango is longer
-15
-I want to have juice
-A:p:p:l:e
-M,a,n,g,o
-A.p.p.l.e.
+1, 2 and 7
+1, 3 and 6
+1, 4 and 5
+2, 3 and 5
